test/typecheck/pass/list_lit.sail

let (list<int>) xs = [||1,2,3,4,5,6||]
