test/typecheck/fail/non_synonym.sail
default Order dec

$include <prelude.sail>

let max = 6
let my_vector : vector(max, dec, int) = [1, 2, 3, 4, 5, 6]
